# MoveInsight

./: repomix-output.xml
MoveInsight/: BodyPoseTypes.swift  ColorManager.swift  CombinedVideo3DView.swift  ContentView.swift  CustomTabBar.swift  DepthEstimationService.swift  Extensions.swift  HomeView.swift  Info.plist  ModelVideoLoader.swift  MoveInsightApp.swift  Pose3DProcessor.swift  PoseOverlayView.swift  SceneView3D.swift  ServerSetupView.swift  TechniqueAnalysisService.swift  TechniqueComparisonView.swift  TechniqueDetailView.swift  TechniqueVideoUploadView.swift  TechniquesListView.swift  UIComponents.swift  UploadTabView.swift  VideoPlayerRepresentable.swift  VideoPlayerViewModel.swift  VideoTransferUtils.swift  VideoWithPoseView.swift  backhand_clear_model.mov
MoveInsight.xcodeproj/: project.pbxproj
MoveInsight.xcodeproj/xcuserdata/charlie.xcuserdatad/xcschemes/: xcschememanagement.plist
MoveInsight/Assets.xcassets/AppIcon.appiconset/: Contents.json
MoveInsight/Assets.xcassets/player_shuttle_distance.imageset/: Contents.json
MoveInsight/Assets.xcassets/velocity_profile_chart.imageset/: Contents.json
MoveInsight/en.lproj/: Localizable.strings
MoveInsight/zh-Hans.lproj/: Localizable.strings
MoveInsightServer/: .gitignore  CLAUDE.md  README.md  TESTING_GUIDE.md  analysis_server.py  court_dection.py  court_detection.py  court_transformation.py  models.py  movement_optimization.py  overhead_diagnose.py  pose_analysis.py  requirements.txt  segment_hits.py  shuttlecock_tracking.py  simple_shuttlecock_viz.py  swing_diagnose.py
MoveInsightServer/.claude/: settings.local.json
MoveInsightServer/TrackNetV3/: LICENSE  README_segmentation.md  correct_label.py  dataset.py  error_analysis.py  generate_mask_data.py  model.py  predict.py  preprocess.py  segment_video.py  tracknet_test.py  train.py
MoveInsightServer/TrackNetV3/corrected_test_label/: drop_frame.json
MoveInsightServer/TrackNetV3/utils/: general.py  metric.py  visualize.py
MoveInsightServer/court-detection/: BadmintonCourtFitter.cpp  BadmintonCourtFitter.h  BadmintonCourtModel.cpp  CMakeLists.txt  CourtLineCandidateDetector.cpp  CourtLineCandidateDetector.h  CourtLinePixelDetector.h  DebugHelpers.cpp  DebugHelpers.h  Line.h  build.sh  geometry.h  main.cpp  test_image.cpp  test_video.cpp
(+29 files in other folders)
